syntax = "proto3";

package grpcproduct;
import "google/protobuf/wrappers.proto";

message Product {
    string id = 1;
    string name = 2;
}

message ProductResponse {
    Product product = 1;
}

service ProductEndPoint {
    rpc findById(google.protobuf.StringValue) returns (ProductResponse) {}
}